// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apps duck actions getAppIconProps should return correct icon props for <AppIcon /> component 1`] = `
Object {
  "domain": "cozy.tools",
  "secure": false,
}
`;

exports[`Apps duck actions initApp initialize realtime and fetch all apps 1`] = `
Array [
  Object {
    "type": "LOADING_APP",
  },
  Object {
    "type": "FETCH_APPS",
  },
  Object {
    "apps": Array [
      Object {
        "categories": Array [
          "isp",
          "telecom",
        ],
        "developer": Object {
          "name": "Cozy",
        },
        "icon": "<svg></svg>",
        "installed": false,
        "isInRegistry": true,
        "label": 2,
        "links": Object {
          "icon": "/registry/konnector-bouilligue/0.1.0/icon",
        },
        "name": "Bouilligue",
        "slug": "konnector-bouilligue",
        "type": "konnector",
        "uninstallable": true,
        "version": "0.1.0",
        "versions": Object {
          "beta": Array [
            "0.1.0",
          ],
          "dev": Array [
            "0.1.0",
          ],
          "stable": Array [
            "0.1.0",
          ],
        },
      },
      Object {
        "categories": Array [
          "transport",
        ],
        "developer": Object {
          "name": "Cozy",
        },
        "icon": "<svg></svg>",
        "installed": false,
        "isInRegistry": true,
        "label": 1,
        "links": Object {
          "icon": "/registry/konnector-trinlane/0.1.0/icon",
        },
        "name": "Trinlane",
        "permissions": Object {
          "mock": Object {
            "type": "io.mock.doctype",
          },
        },
        "slug": "konnector-trinlane",
        "tags": Array [
          "transport",
          "files",
          "bills",
        ],
        "type": "konnector",
        "uninstallable": true,
        "version": "0.1.0",
        "versions": Object {
          "beta": Array [
            "0.1.0",
          ],
          "dev": Array [
            "0.1.0",
          ],
          "stable": Array [
            "0.1.0",
          ],
        },
      },
      Object {
        "categories": Array [
          "cozy",
        ],
        "developer": Object {
          "name": "Cozy",
        },
        "editor": "Cozy",
        "icon": "<svg></svg>",
        "installed": false,
        "isInRegistry": true,
        "label": 1,
        "links": Object {
          "icon": "/registry/photos/3.0.0/icon",
        },
        "locales": Object {
          "en": Object {
            "long_description": "A long description finally short",
          },
        },
        "name": "Photos",
        "name_prefix": "Cozy",
        "slug": "photos",
        "type": "webapp",
        "uninstallable": true,
        "version": "3.0.0",
        "versions": Object {
          "beta": Array [
            "3.0.0",
          ],
          "dev": Array [
            "3.0.0",
          ],
          "stable": Array [
            "3.0.0",
          ],
        },
      },
      Object {
        "categories": Array [
          "partners",
        ],
        "editor": "vestrejail",
        "icon": "<svg></svg>",
        "installed": false,
        "isInRegistry": true,
        "label": 4,
        "links": Object {
          "icon": "/registry/tasky/1.0.0/icon",
        },
        "name": "Tasky",
        "slug": "tasky",
        "type": "webapp",
        "uninstallable": true,
        "version": "1.0.0",
        "versions": Object {
          "beta": Array [
            "1.0.0",
          ],
          "dev": Array [
            "1.0.0",
          ],
          "stable": Array [
            "1.0.0",
          ],
        },
      },
    ],
    "lang": "en",
    "type": "FETCH_REGISTRY_APPS_SUCCESS",
  },
  Object {
    "type": "FETCH_APPS",
  },
  Object {
    "apps": Array [],
    "lang": "en",
    "type": "FETCH_APPS_SUCCESS",
  },
]
`;

exports[`Apps duck actions initAppIntent initialize realtime and fetch asked installed app 1`] = `
Array [
  Object {
    "type": "LOADING_APP_INTENT",
  },
  Object {
    "type": "FETCH_APP",
  },
  Object {
    "app": Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "label": 1,
      "links": Object {
        "icon": "/registry/collect/3.0.0/icon",
      },
      "name": "Collect",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "slug": "collect",
      "tags": Array [
        "konnector",
        "collect",
        "bills",
        "providers",
        "files",
      ],
      "type": "webapp",
      "uninstallable": true,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    },
    "lang": "en",
    "type": "FETCH_APP_SUCCESS",
  },
]
`;

exports[`Apps duck actions initAppIntent initialize realtime and fetch asked not installed konnector 1`] = `
Array [
  Object {
    "type": "LOADING_APP_INTENT",
  },
  Object {
    "type": "FETCH_APP",
  },
  Object {
    "app": Object {
      "categories": Array [
        "isp",
        "telecom",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "icon": "<svg></svg>",
      "installed": false,
      "isInRegistry": true,
      "label": 2,
      "links": Object {
        "icon": "/registry/konnector-bouilligue/0.1.0/icon",
      },
      "name": "Bouilligue",
      "slug": "konnector-bouilligue",
      "type": "konnector",
      "uninstallable": true,
      "version": "0.1.0",
      "versions": Object {
        "beta": Array [
          "0.1.0",
        ],
        "dev": Array [
          "0.1.0",
        ],
        "stable": Array [
          "0.1.0",
        ],
      },
    },
    "lang": "en",
    "type": "FETCH_APP_SUCCESS",
  },
]
`;

exports[`Apps duck helpers _getRegistryAssetsLinks should handle empty manifest or appVersion 1`] = `
Object {
  "iconLink": undefined,
  "partnershipIconLink": undefined,
  "screenshotsLinks": undefined,
}
`;

exports[`Apps duck helpers _getRegistryAssetsLinks should handle icon link from manifest slug and version 1`] = `
Object {
  "iconLink": "/registry/mock/1.0.0/icon",
  "partnershipIconLink": undefined,
  "screenshotsLinks": undefined,
}
`;

exports[`Apps duck helpers _getRegistryAssetsLinks should handle partnership icon link 1`] = `
Object {
  "iconLink": "/registry/mock/1.0.0/icon",
  "partnershipIconLink": "https://testcozy.mycozy.cloud/registry/mock/1.0.0/partnership_icon",
  "screenshotsLinks": undefined,
}
`;

exports[`Apps duck helpers _getRegistryAssetsLinks should handle screenshots links 1`] = `
Object {
  "iconLink": "/registry/mock/1.0.0/icon",
  "partnershipIconLink": undefined,
  "screenshotsLinks": Array [
    "https://testcozy.mycozy.cloud/registry/mock/1.0.0/screenshots/screen1.jpg",
    "https://testcozy.mycozy.cloud/registry/mock/1.0.0/screenshots/screen2.png",
    "https://testcozy.mycozy.cloud/registry/mock/1.0.0/screenshots/screen3.gif",
  ],
}
`;
